{
    "name": "MainController",
    "maps": [
        {
            "name": "Mouse",
            "id": "7f223d7a-d0d1-4149-a779-328046d61a4c",
            "actions": [
                {
                    "name": "Clicks",
                    "type": "Value",
                    "id": "f0180120-67c3-4b66-b5e6-75f052003f87",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "02072e25-1db3-41fd-986f-a18f6062f3e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ea5c914-4d19-4370-ad5d-c5a2ba515187",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clicks",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5aea7dd-db67-411f-b088-55463cf89696",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "b687c1c1-be3e-49e6-9c3a-e1587585e3cc",
            "actions": [
                {
                    "name": "MovementCamera",
                    "type": "Value",
                    "id": "344c658f-0745-4137-91b3-9e39cbde5b0d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementPlayer",
                    "type": "Value",
                    "id": "d0c91b9b-22bf-4d09-bef0-cc4fcb627418",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ReloadScene",
                    "type": "Button",
                    "id": "b2e285e5-7f60-4aef-8eb4-48daa901636c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuActive",
                    "type": "Button",
                    "id": "397d32c3-3f3e-4324-b477-cd2cd4275a4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "61e1bc59-6bd1-44c9-a021-acdd767749eb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "989a5fb0-29c9-41a9-ac89-8c0967277c3f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d8f8b604-bb0d-4a3c-82ba-4ee31cfb0e6f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a580c8d3-7850-4f0c-b6a4-08378c801809",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "39c8b560-9483-4848-ab75-f0a28b1b6be4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51b13f61-97ba-45c6-8cb0-6071e2b6210a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114bccfe-501b-47b4-9da5-986b2068fa4c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "ea76e63e-31ae-416b-bb68-87b434097fd2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPlayer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "576ced25-3116-413a-bc7d-df0087c216ce",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dbdd96ac-00ac-4a48-ba53-994e02a937f7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cc5beed5-4352-41f5-871d-639f93e0448a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "de89a30d-9931-428f-9231-5aba38890979",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPlayer",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}